web/themes/custom/ethicscompliance/css/ethicscompliance.css
/* ... */
.main-container aside nav li li a,
.main-container aside nav li li a:link,
.main-container aside nav li li a:visited,
.main-container aside nav li li a.active,
.main-container aside nav li li a.active:visited,
.main-container aside nav li li a.is-active,
.main-container aside nav li li a.is-active:visited {
	font-weight: 500;
	color: var(---black3);
	font-size: .95rem;
	letter-spacing: .035rem;
	font-family: "Roboto Condensed", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
	border: 0 !important;
	padding: .5rem .45rem .5rem 1.75rem;
	margin: .125rem 0;
}

.main-container aside nav li li a::before,
.main-container aside nav li li a:link::before,
.main-container aside nav li li a:visited::before,
.main-container aside nav li li a::before,
.main-container aside nav li li a:link::before,
.main-container aside nav li li a:visited::before {
	color: transparent;
  display: inline-block;
  content: '\25C6';
  margin-right: .25rem;
 transition: all .2s ease-in-out;
}

.main-container aside nav li li a.active::before,
.main-container aside nav li li a.active:link::before,
.main-container aside nav li li a.active:visited::before,
.main-container aside nav li li a.is-active::before,
.main-container aside nav li li a.is-active:link::before,
.main-container aside nav li li a.is-active:visited::before,
.main-container aside nav li li a:hover::before,
.main-container aside nav li li a:focus::before,
.main-container aside nav li li a:active::before,
.main-container aside nav li li a:visited:hover::before,
.main-container aside nav li li a:visited:focus::before,
.main-container aside nav li li a:visited:active::before {
  display: inline-block;
  color: var(--gt-navy2);
  content: '\25C6';
  margin-right: .25rem;
}

body h1,
body h2,
body h3,
body h4,
body h5,
body h6 {
  color: var(--gt-navy1);
}

#block-ethicscompliance-landingpagenavigation {
  float: left;
}
#block-ethicscompliance-landingpagenavigation ul {
  list-style: none;
}

.headshot-message-block-wrapper {
  display: flex;
  flex-direction: row;
  gap: 40px;
}
.headshot-message-block-wrapper .headshot-wrapper {
  min-width: 320px;
  display: flex;
  flex-direction: column;
  padding:20px;
  border: 1px solid #c2c2c2;
  background-color: #ffffff;
  box-shadow: 8px 4px 4px 0 rgba(0,0,0, 0.15);
}
.headshot-message-block-wrapper .headshot-wrapper img {
  border:1px solid #c2c2c2;
}
.headshot-message-block-wrapper .headshot-text-wrapper {
  padding-top: 15px
}
.headshot-message-block-wrapper .field--name-field-headshot-name {
  color: #A4925A;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: 1;
}
.headshot-message-block-wrapper .field--name-field-headshot-title {
  color: #333333;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.4;
}

.headshot-message-block-wrapper .message-text-wrapper {
  padding-top: 20px;
}

.feature-topic-section .layout__region--content {
  border: 2px solid #A4925A;
  margin: 0 16px;
  padding: 20px;
  background: linear-gradient(180deg, rgba(179, 163, 105, 0.50) 0%, rgba(255, 255, 255, 0.00) 51.56%, rgba(179, 163, 105, 0.50) 97.92%), #FFF;
}

